BMH:  - Adding a proper README  - Cleaned up the ant build a little  - Made HttpMock throw a Runtime when IOException